--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -30,6 +30,11 @@ jobs:
             type=raw,value=latest
             type=raw,value=${{ env.IMAGE_TAG_SHA }}
 
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+        with:
+          driver: docker-container
+
       - name: Login Docker Hub
         uses: docker/login-action@v3
         with:
@@ -61,6 +66,11 @@ jobs:
           tags: |
             type=raw,value=latest
             type=raw,value=${{ env.IMAGE_TAG_SHA }}
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+        with:
+          driver: docker-container
 
       - name: Login Docker Hub
         uses: docker/login-action@v3
