--- a/.github/workflows/deploy-main.yml
+++ b/.github/workflows/deploy-main.yml
@@ -15,19 +15,19 @@ jobs:
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          username: ${{ vars.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Build & Push backend image
         run: |
           echo " Building backend image ..."
-          docker build -t ${{ secrets.DOCKER_USERNAME }}/todo-backend:latest ./backend
-          docker push ${{ secrets.DOCKER_USERNAME }}/todo-backend:latest
+          docker build -t ${{ vars.DOCKERHUB_USERNAME }}/todo-backend:latest ./backend
+          docker push ${{ secrets.DOCKERHUB_TOKEN }}/todo-backend:latest
 
       - name: Backend image info
         run: |
           echo " Backend image pushed to Docker Hub:"
-          echo "    docker.io/${{ secrets.DOCKER_USERNAME }}/todo-backend:latest"
+          echo "    docker.io/${{ vars.DOCKERHUB_USERNAME }}/todo-backend:latest"
 
 
   frontend:
@@ -41,15 +41,15 @@ jobs:
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          username: ${{ vars.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Build & Push frontend image
         run: |
           docker build \
             --build-arg APIURL="${{ secrets.BACKEND_API_URL }}" \
-            -t ${{ secrets.DOCKER_USERNAME }}/todo-frontend:latest ./frontend
-          docker push ${{ secrets.DOCKER_USERNAME }}/todo-frontend:latest
+            -t ${{ vars.DOCKERHUB_USERNAME }}/todo-frontend:latest ./frontend
+          docker push ${{ vars.DOCKERHUB_USERNAME }}/todo-frontend:latest
 
 
       - name: Frontend image info
