--- a/.github/workflows/deploy-main.yml
+++ b/.github/workflows/deploy-main.yml
@@ -1,16 +1,29 @@
+# .github/workflows/deploy-main.yml
 name: 3-tier Infra + DockerHub + Deploy
 
 on:
   push:
-    branches: [ main ]
+    branches: [ "main" ]
+
+concurrency:
+  group: deploy-${{ github.ref }}
+  cancel-in-progress: true
+
+env:
+  # Docker Hub namespace (gebruik altijd lowercase)
+  DOCKER_NS: ${{ toLower(vars.DOCKERHUB_USERNAME) }}
+  # Optioneel: zet dit op true om Docker BuildKit meer logging te geven
+  DOCKER_BUILDKIT: "1"
 
 jobs:
   backend:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
@@ -18,25 +31,40 @@ jobs:
           username: ${{ vars.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
+      - name: Docker meta (backend)
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: docker.io/${{ env.DOCKER_NS }}/todo-backend
+          tags: |
+            type=raw,value=latest
+            type=sha,format=short
+
       - name: Build & Push backend image
-        run: |
-          echo " Building backend image ..."
-          docker build -t ${{ vars.DOCKERHUB_USERNAME }}/todo-backend:latest ./backend
-          docker push ${{ secrets.DOCKERHUB_TOKEN }}/todo-backend:latest
+        uses: docker/build-push-action@v6
+        with:
+          context: ./backend
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
 
       - name: Backend image info
         run: |
-          echo " Backend image pushed to Docker Hub:"
-          echo "    docker.io/${{ vars.DOCKERHUB_USERNAME }}/todo-backend:latest"
-
+          echo "Pushed:"
+          echo "${{ env.DOCKER_NS }}/todo-backend:latest"
+          echo "${{ env.DOCKER_NS }}/todo-backend:${GITHUB_SHA::7}"
 
   frontend:
     runs-on: ubuntu-latest
-    needs: backend  # wait for backend image to finish
-
+    needs: backend
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
@@ -44,24 +72,36 @@ jobs:
           username: ${{ vars.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Build & Push frontend image
-        run: |
-          docker build \
-            --build-arg APIURL="${{ secrets.BACKEND_API_URL }}" \
-            -t ${{ vars.DOCKERHUB_USERNAME }}/todo-frontend:latest ./frontend
-          docker push ${{ vars.DOCKERHUB_USERNAME }}/todo-frontend:latest
+      - name: Docker meta (frontend)
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: docker.io/${{ env.DOCKER_NS }}/todo-frontend
+          tags: |
+            type=raw,value=latest
+            type=sha,format=short
 
+      - name: Build & Push frontend image
+        uses: docker/build-push-action@v6
+        with:
+          context: ./frontend
+          push: true
+          build-args: |
+            APIURL=${{ secrets.BACKEND_API_URL }}
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
 
       - name: Frontend image info
         run: |
-          echo " Frontend image pushed to Docker Hub:"
-          echo "    docker.io/${{ secrets.DOCKER_USERNAME }}/todo-frontend:latest"
-
-
+          echo "Pushed:"
+          echo "${{ env.DOCKER_NS }}/todo-frontend:latest"
+          echo "${{ env.DOCKER_NS }}/todo-frontend:${GITHUB_SHA::7}"
 
   infrastructure:
     runs-on: ubuntu-latest
-    needs: [backend, frontend]   # waits until both Docker images are ready
+    needs: [ backend, frontend ]
 
     steps:
       - name: Checkout repository
@@ -82,12 +122,22 @@ jobs:
 
       - name: Terraform Init
         working-directory: ./oplossing
-        run: terraform init
+        run: terraform init -input=false -no-color
+
+      - name: Terraform Validate
+        working-directory: ./oplossing
+        run: terraform validate -no-color
 
       - name: Terraform Plan
+        id: plan
         working-directory: ./oplossing
-        run: terraform plan -var "key_name=${{ secrets.EC2_KEY_NAME }}" -out=tfplan
+        run: |
+          terraform plan \
+            -input=false \
+            -no-color \
+            -var "key_name=${{ secrets.EC2_KEY_NAME }}" \
+            -out=tfplan
 
       - name: Terraform Apply
         working-directory: ./oplossing
-        run: terraform apply -auto-approve tfplan
+        run: terraform apply -input=false -no-color -auto-approve tfplan
