--- a/.github/workflows/deploy-main.yml
+++ b/.github/workflows/deploy-main.yml
@@ -1,4 +1,3 @@
-# .github/workflows/deploy-main.yml
 name: 3-tier Infra + DockerHub + Deploy
 
 on:
@@ -10,10 +9,7 @@ concurrency:
   cancel-in-progress: true
 
 env:
-  # Docker Hub namespace (gebruik altijd lowercase)
-  DOCKER_NS: ${{ toLower(vars.DOCKERHUB_USERNAME) }}
-  # Optioneel: zet dit op true om Docker BuildKit meer logging te geven
-  DOCKER_BUILDKIT: "1"
+  DOCKERHUB_USERNAME: ${{ vars.DOCKERHUB_USERNAME }}
 
 jobs:
   backend:
@@ -28,37 +24,33 @@ jobs:
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
         with:
-          username: ${{ vars.DOCKERHUB_USERNAME }}
+          username: ${{ env.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Docker meta (backend)
-        id: meta
-        uses: docker/metadata-action@v5
-        with:
-          images: docker.io/${{ env.DOCKER_NS }}/todo-backend
-          tags: |
-            type=raw,value=latest
-            type=sha,format=short
-
       - name: Build & Push backend image
-        uses: docker/build-push-action@v6
-        with:
-          context: ./backend
-          push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+        run: |
+          USER_LC=$(echo "${DOCKERHUB_USERNAME}" | tr '[:upper:]' '[:lower:]')
+          IMAGE="docker.io/${USER_LC}/todo-backend"
+
+          echo "🛠️ Building backend image: ${IMAGE}:latest"
+          docker build -t "${IMAGE}:latest" ./backend
+          docker tag "${IMAGE}:latest" "${IMAGE}:${GITHUB_SHA::7}"
+
+          echo "🚀 Pushing backend images ..."
+          docker push "${IMAGE}:latest"
+          docker push "${IMAGE}:${GITHUB_SHA::7}"
 
       - name: Backend image info
         run: |
-          echo "Pushed:"
-          echo "${{ env.DOCKER_NS }}/todo-backend:latest"
-          echo "${{ env.DOCKER_NS }}/todo-backend:${GITHUB_SHA::7}"
+          USER_LC=$(echo "${DOCKERHUB_USERNAME}" | tr '[:upper:]' '[:lower:]')
+          echo "✅ Backend image pushed to:"
+          echo "   docker.io/${USER_LC}/todo-backend:latest"
+          echo "   docker.io/${USER_LC}/todo-backend:${GITHUB_SHA::7}"
 
   frontend:
     runs-on: ubuntu-latest
     needs: backend
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -69,35 +61,31 @@ jobs:
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
         with:
-          username: ${{ vars.DOCKERHUB_USERNAME }}
+          username: ${{ env.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Docker meta (frontend)
-        id: meta
-        uses: docker/metadata-action@v5
-        with:
-          images: docker.io/${{ env.DOCKER_NS }}/todo-frontend
-          tags: |
-            type=raw,value=latest
-            type=sha,format=short
-
       - name: Build & Push frontend image
-        uses: docker/build-push-action@v6
-        with:
-          context: ./frontend
-          push: true
-          build-args: |
-            APIURL=${{ secrets.BACKEND_API_URL }}
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+        run: |
+          USER_LC=$(echo "${DOCKERHUB_USERNAME}" | tr '[:upper:]' '[:lower:]')
+          IMAGE="docker.io/${USER_LC}/todo-frontend"
+
+          echo "🛠️ Building frontend image: ${IMAGE}:latest"
+          docker build \
+            --build-arg APIURL="${{ secrets.BACKEND_API_URL }}" \
+            -t "${IMAGE}:latest" ./frontend
+
+          docker tag "${IMAGE}:latest" "${IMAGE}:${GITHUB_SHA::7}"
+
+          echo "🚀 Pushing frontend images ..."
+          docker push "${IMAGE}:latest"
+          docker push "${IMAGE}:${GITHUB_SHA::7}"
 
       - name: Frontend image info
         run: |
-          echo "Pushed:"
-          echo "${{ env.DOCKER_NS }}/todo-frontend:latest"
-          echo "${{ env.DOCKER_NS }}/todo-frontend:${GITHUB_SHA::7}"
+          USER_LC=$(echo "${DOCKERHUB_USERNAME}" | tr '[:upper:]' '[:lower:]')
+          echo "✅ Frontend image pushed to:"
+          echo "   docker.io/${USER_LC}/todo-frontend:latest"
+          echo "   docker.io/${USER_LC}/todo-frontend:${GITHUB_SHA::7}"
 
   infrastructure:
     runs-on: ubuntu-latest
@@ -129,7 +117,6 @@ jobs:
         run: terraform validate -no-color
 
       - name: Terraform Plan
-        id: plan
         working-directory: ./oplossing
         run: |
           terraform plan \
