--- a/.github/workflows/deploy-main.yml
+++ b/.github/workflows/deploy-main.yml
@@ -10,10 +10,14 @@ concurrency:
 
 env:
   DOCKERHUB_USERNAME: ${{ vars.DOCKERHUB_USERNAME }}
+  WORKDIR: ./oplossing
+  AWS_REGION: us-east-1
 
 jobs:
   backend:
     runs-on: ubuntu-latest
+    outputs:
+      backend_digest: ${{ steps.calc.outputs.backend_digest }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -27,30 +31,33 @@ jobs:
           username: ${{ env.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Build & Push backend image
+      - name: Build & Push backend image (latest + sha)
         run: |
           USER_LC=$(echo "${DOCKERHUB_USERNAME}" | tr '[:upper:]' '[:lower:]')
           IMAGE="docker.io/${USER_LC}/todo-backend"
+          SHA_TAG=$(echo "${GITHUB_SHA}" | cut -c1-7)
 
-          echo "🛠️ Building backend image: ${IMAGE}:latest"
-          docker build -t "${IMAGE}:latest" ./backend
-          docker tag "${IMAGE}:latest" "${IMAGE}:${GITHUB_SHA::7}"
-
-          echo "🚀 Pushing backend images ..."
+          docker build -t "${IMAGE}:latest" -t "${IMAGE}:${SHA_TAG}" ./backend
           docker push "${IMAGE}:latest"
-          docker push "${IMAGE}:${GITHUB_SHA::7}"
+          docker push "${IMAGE}:${SHA_TAG}"
 
-      - name: Backend image info
+      - name: Calculate backend image digest
+        id: calc
         run: |
+          set -e
           USER_LC=$(echo "${DOCKERHUB_USERNAME}" | tr '[:upper:]' '[:lower:]')
-          echo "✅ Backend image pushed to:"
-          echo "   docker.io/${USER_LC}/todo-backend:latest"
-          echo "   docker.io/${USER_LC}/todo-backend:${GITHUB_SHA::7}"
+          IMAGE="docker.io/${USER_LC}/todo-backend"
+          SHA_TAG=$(echo "${GITHUB_SHA}" | cut -c1-7)
+          # Pak de manifest digest van de exacte tag
+          DIGEST=$(docker buildx imagetools inspect "${IMAGE}:${SHA_TAG}" | sed -n 's/^Digest: //p' | head -n1)
+          echo "backend_digest=${DIGEST}" >> $GITHUB_OUTPUT
+          echo "Resolved backend digest: ${DIGEST}"
 
   frontend:
     runs-on: ubuntu-latest
     needs: backend
-
+    outputs:
+      frontend_digest: ${{ steps.calc.outputs.frontend_digest }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -64,38 +71,38 @@ jobs:
           username: ${{ env.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Build & Push frontend image
+      - name: Build & Push frontend image (latest + sha)
         run: |
           USER_LC=$(echo "${DOCKERHUB_USERNAME}" | tr '[:upper:]' '[:lower:]')
           IMAGE="docker.io/${USER_LC}/todo-frontend"
+          SHA_TAG=$(echo "${GITHUB_SHA}" | cut -c1-7)
 
-          echo "🛠️ Building frontend image: ${IMAGE}:latest"
           docker build \
             --build-arg APIURL="${{ secrets.BACKEND_API_URL }}" \
-            -t "${IMAGE}:latest" ./frontend
+            -t "${IMAGE}:latest" -t "${IMAGE}:${SHA_TAG}" ./frontend
 
-          docker tag "${IMAGE}:latest" "${IMAGE}:${GITHUB_SHA::7}"
-
-          echo "🚀 Pushing frontend images ..."
           docker push "${IMAGE}:latest"
-          docker push "${IMAGE}:${GITHUB_SHA::7}"
+          docker push "${IMAGE}:${SHA_TAG}"
 
-      - name: Frontend image info
+      - name: Calculate frontend image digest
+        id: calc
         run: |
+          set -e
           USER_LC=$(echo "${DOCKERHUB_USERNAME}" | tr '[:upper:]' '[:lower:]')
-          echo "✅ Frontend image pushed to:"
-          echo "   docker.io/${USER_LC}/todo-frontend:latest"
-          echo "   docker.io/${USER_LC}/todo-frontend:${GITHUB_SHA::7}"
+          IMAGE="docker.io/${USER_LC}/todo-frontend"
+          SHA_TAG=$(echo "${GITHUB_SHA}" | cut -c1-7)
+          DIGEST=$(docker buildx imagetools inspect "${IMAGE}:${SHA_TAG}" | sed -n 's/^Digest: //p' | head -n1)
+          echo "frontend_digest=${DIGEST}" >> $GITHUB_OUTPUT
+          echo "Resolved frontend digest: ${DIGEST}"
 
   infrastructure:
     runs-on: ubuntu-latest
     needs: [ backend, frontend ]
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Set up Terraform
+      - name: Setup Terraform
         uses: hashicorp/setup-terraform@v3
         with:
           terraform_version: 1.8.4
@@ -106,25 +113,29 @@ jobs:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-session-token: ${{ secrets.AWS_SESSION_TOKEN }}
-          aws-region: us-east-1
+          aws-region: ${{ env.AWS_REGION }}
 
       - name: Terraform Init
-        working-directory: ./oplossing
+        working-directory: ${{ env.WORKDIR }}
         run: terraform init -input=false -no-color
 
       - name: Terraform Validate
-        working-directory: ./oplossing
+        working-directory: ${{ env.WORKDIR }}
         run: terraform validate -no-color
 
       - name: Terraform Plan
-        working-directory: ./oplossing
+        working-directory: ${{ env.WORKDIR }}
+        env:
+          TF_VAR_docker_ns: ${{ vars.DOCKERHUB_USERNAME }}
+          TF_VAR_backend_digest: ${{ needs.backend.outputs.backend_digest }}
+          TF_VAR_frontend_digest: ${{ needs.frontend.outputs.frontend_digest }}
+          TF_VAR_mongo_digest: ${{ vars.MONGO_DIGEST }} # optioneel vooraf ingesteld org var, zie README
         run: |
           terraform plan \
-            -input=false \
-            -no-color \
+            -input=false -no-color \
             -var "key_name=${{ secrets.EC2_KEY_NAME }}" \
             -out=tfplan
 
       - name: Terraform Apply
-        working-directory: ./oplossing
+        working-directory: ${{ env.WORKDIR }}
         run: terraform apply -input=false -no-color -auto-approve tfplan
